@@ -3918,6 +3918,8 @@ enum
 
     STR_TILE_INSPECTOR_WALL_ANIMATION_FRAME = 6367,
 
+    STR_WINE_NOT_RECOMMENDED = 6368,
+
     // Have to include resource strings (from scenarios and objects) for the time being now that language is partially working
     /* MAX_STR_COUNT = 32768 */ // MAX_STR_COUNT - upper limit for number of strings, not the current count strings
 };
